Alterando para mobile

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -34,7 +34,7 @@
 
     </header>
 
-    <main>
+    <main class="main">
 
         <div>
             <h1> Design de Sobrancelhas Especializado</h1>
