alteração no index.html

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -37,7 +37,7 @@
     <main class="main">
 
         <div>
-            <h1> Design de Sobrancelhas Especializado</h1>
+            <h1> Design de Sobrancelhas especializado</h1>
             <br>
             <br>
             <button class="button-agende">Agende seu horario hoje mesmo </button>
